# Uci-Cal-api

./: CMakeLists.txt  README.md
consideraciones/: CmakeImac.txt  agregar_archivos_apr.txt  clases_de_cada_programa.txt  clases_ya_escritas.txt  como_correr.txt  libreria_a_instalar.txt  metodos_agregados_a_clases.txt  notas.txt  tareas_a_realizar_para_completar.txt  variables_entorno.txt
consideraciones/apr/: apr.h  apr_allocator.h  apr_errno.h  apr_general.h  apr_pools.h  apr_thread_mutex.h  apr_time.h  apr_want.h
externJSON/: CMakeLists.txt
externJSON/include/extjson_uci/base/: BooleanAccessor.h  ByteAccessor.h  DateTimeAccessor.h  DoubleAccessor.h  DurationAccessor.h  EnumAccessor.h  ExternJSON.h  ExternalizerRead.h  ExternalizerRead1.h  ExternalizerRead10.h  ExternalizerRead2.h  ExternalizerRead3.h  ExternalizerRead4.h  ExternalizerRead5.h  ExternalizerRead6.h  ExternalizerRead7.h  ExternalizerRead8.h  ExternalizerRead9.h  ExternalizerWrite.h  ExternalizerWrite1.h  ExternalizerWrite10.h  ExternalizerWrite2.h  ExternalizerWrite3.h  ExternalizerWrite4.h  ExternalizerWrite5.h  ExternalizerWrite6.h  ExternalizerWrite7.h  ExternalizerWrite8.h  ExternalizerWrite9.h  FloatAccessor.h  IntAccessor.h  LongAccessor.h  ShortAccessor.h  StringAccessor.h  TimeAccessor.h  UnsignedByteAccessor.h  UnsignedIntAccessor.h  (+1 more)
externXML/: CMakeLists.txt
starterKit/: CMakeLists.txt
starterKit/src/asb_uci/base/: AbstractServiceBusConnection.cpp  AbstractServiceBusConnectionFactory.cpp  AccessorFileLocationMT.cpp  AccessorFileLocationMT.h  CMakeListm1.txt  CMakeLists.txt  ConfigReader.cpp  ConnectionMonitor.cpp  ConnectionStatus.cpp  ExampleListener.cpp  ExampleListener.h  Externalizer.cpp  ExternalizerLoader.cpp  FileLocation_CP-15A.xml  MessageListener.cpp  MessageReader.cpp  MessageWriter.cpp  RandomUUIDGenerator.cpp  ServiceStatusListener.cpp  StarterKitCALConfig.xml  TimeBasedUUIDGenerator.cpp  UUIDClock.cpp  UUIDFactory.cpp  UUIDGenerator.cpp  Version3UUIDHelper.cpp  au.py  example.cpp  example.h  main.cpp  my_example  version.properties
starterKit/src/asb_uci/base/config/: CalConfig.cpp  CalConfig.h
starterKit/src/asb_uci/base/consideraciones/: config_a_tener_en_cuenta.txt
starterKit/src/asb_uci/base/headers/: AccessorFileLocationMT.h  ExampleListener.h  example.h
(+34430 files in other folders)
